# stilla

./: .gitignore  Cargo.toml  README.md
example/pages/: index.md
example/pages/posts/: 2022-11-12_something-else.md  2022-11-13_another.md  2022-11-14_goodbye-javascript.md  goodbye-javascript.md  index.md
example/templates/: index.html  page.html  posts.html
pages/: index.md
pages/blog/: some-post.md
src/: main.rs  page.rs  tailwind.rs
tailwind/macos/: tailwind.config.js
