[package]
name = "stilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.2.1"
clap = { version = "4.0.10", features = ["derive"] }
comrak = "0.14.0"
include_dir = {version = "0.7.3", features = ["glob"]}
serde = {version = "1.0.147", features = ["derive"]}
tera = "1.17.1"
tinytemplate = "1.2.1"
walkdir = "2.3.2"
