[package]
name = "stilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.2.1"
clap = { version = "4.0.10", features = ["derive"] }
comrak = "0.14.0"
include_dir = {version = "0.7.3", features = ["glob"]}
regex = "1.7.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_yaml = "0.9.14"
time = { version = "0.3.17", features = ["serde"] }
tinytemplate = "1.2.1"
walkdir = "2.3.2"
